# fat-project

./: .dockerignore  .env.dev  .env.template  .flake8  Dockerfile  Dockerfile.dev  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
gunicorn/: gunicorn_conf.py
scripts/: format.sh  make-migrations.sh  run-migrations.sh  start-dev.sh  start-prod.sh
scripts/postgres/: backup.sh
src/: app.py  test.py
src/adapters/: test.py
src/config/: database.py  settings.py
src/config/app/: controller.py  exception_handlers.py  hooks.py  instance.py  middlewares.py
src/controllers/: routes.py
src/controllers/v1/: routes.py
src/controllers/v1/auth/: routes.py  schemas.py
src/controllers/v1/test/: routes.py
src/core/: dependencies_injection.py
src/core/adapters/: abstract.py  sqlmodel.py
src/core/entity/: auth.py
src/core/entity/base/: entity.py  types.py
src/core/exceptions/: auth.py  base.py  pagination.py
src/core/models/: user.py
src/core/pagination/: helpers.py  schema.py
src/core/permissions/: base.py  generic.py
src/core/repository/: abstract.py  auth.py  database.py
src/core/service/: abstract.py  auth.py  database.py
src/core/uow/: base.py  database.py
src/dto/: test.py  user.py
src/dto/auth/: token.py
src/entity/: test.py
src/helpers/: database.py  singleton.py  types.py
src/helpers/constants/: config.py
src/infra/: types.py
src/models/: test.py
src/repositories/: test.py
src/services/: test.py
